// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitationTitleView partial should render default view 1`] = `
<span
  className="className"
>
  prefix
  value
  suffix
</span>
`;

exports[`CitationTitleView partial should render properly with a suffix that equal to the last character of the value 1`] = `
<span
  className=""
>
   
  values
</span>
`;

exports[`CitationTitleView partial should render properly with empty props 1`] = `
<span
  className=" empty"
/>
`;

exports[`CitationTitleView partial should render properly with value prop only 1`] = `
<span
  className=""
>
   
  value
  .
</span>
`;
